fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,17 @@ header{
 }
 main{
     width: 90vw;
-    height: calc(100vh - 140px);
+    height: 82vh;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    overflow-y: scroll;
 }
 .card{
     height: 100px;
-    width: calc(100% / 7 );
+    width: 140px;
     margin-bottom: 10px;
     margin-right: 5px;
     background-image: url(../img/640px-IMG_2124_Everest.jpg);
@@ -47,7 +48,7 @@ main{
 }
 footer{
     width: 100vw;
-    height: 70px;
+    height: 9vh;
     background-color: #222222;
     margin-top: 12px;
     display: flex;
